--- a/index.html
+++ b/index.html
@@ -2,32 +2,24 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Meine kuuhle Homepage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hochverfügbarkeits-Party!</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; background-color: #f0f0f0; }
-        .container { background-color: white; padding: 20px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); display: inline-block; }
-        h1 { color: #333; }
-        p { color: #666; font-size: 1.2em; }
-        .hostname { font-weight: bold; color: #007bff; }
+        body { font-family: 'Courier New', Courier, monospace; background-color: #282c34; color: #61dafb; text-align: center; padding-top: 100px; font-size: 1.5em; }
+        h1 { color: #f9a825; }
+        .hostname { background-color: #3e4451; padding: 20px; border-radius: 10px; display: inline-block; margin-top: 30px; }
+        .joke { margin-top: 50px; font-style: italic; color: #9e9e9e; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Willkommen auf meiner Webseite!</h1>
-        <p>Diese Seite wird ausgeliefert von: <span class="hostname" id="hostname-display"></span></p>
-    </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            fetch('/hostname')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('hostname-display').textContent = data;
-                })
-                .catch(error => {
-                    console.error('Fehler beim Abrufen des Hostnamens:', error);
-                    document.getElementById('hostname-display').textContent = 'Hostname konnte nicht geladen werden.';
-                });
-        });
-    </script>
+    <h1>Willkommen zur Lastausgleichs-Party! 🥳</h1>
+    <p>Ein Load Balancer ist wie ein Türsteher im Club...</p>
+    <p>Er sorgt dafür, dass nicht alle Anfragen zur gleichen überlasteten Instanz rennen.</p>
+
+    <div class="hostname">
+    Bedient von: <strong>__HOSTNAME__</strong>
+</div>
+
+    <p class="joke">Warum hat der Webserver Schluss gemacht? <br> Er hatte zu viele Bindungsprobleme mit Port 80!</p>
 </body>
 </html>
