--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h1>Willkommen zur Lastausgleichs-Party! 🥳</h1>
+    <h1>Herzlich Willkommen zur Lastausgleichs-Party! 🥳</h1>
     <p>Ein Load Balancer ist wie ein Türsteher im Club...</p>
     <p>Er sorgt dafür, dass nicht alle Anfragen zur gleichen überlasteten Instanz rennen.</p>
 
